--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         <activity
             android:name=".TrackActivity"
             android:label="@string/track_activity_label"
-            android:parentActivityName=".SearchResultsActivity"/>
+            android:parentActivityName=".SearchActivity"/>
     </application>
 
 </manifest>
