feat: display track lyrics from favorites activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,8 +30,7 @@
             android:parentActivityName=".SearchActivity" />
         <activity
             android:name=".TrackActivity"
-            android:label="@string/track_activity_label"
-            android:parentActivityName=".SearchActivity" />
+            android:label="@string/track_activity_label" />
         <activity
             android:name=".FavoritesActivity"
             android:label="@string/favorites_activity_label"
